--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "daisyui": "^2.51.5",
     "gsap": "^3.11.5",
     "next": "13.2.4",
     "react": "18.2.0",
