--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
     "daisyui": "^2.51.5",
+    "framer-motion": "^10.11.3",
     "gsap": "^3.11.5",
     "next": "13.2.4",
     "react": "18.2.0",
